--- a/movies/package.json
+++ b/movies/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "env": "^0.0.2",
